[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

# The design-system kit. ssr/hydrate are forwarded so it emits identical
# server/client HTML.
ui = { path = "../../../crates/ui", version = "0.1.0", default-features = false }

i18n = { path = "../../../crates/i18n", version = "0.1.0", default-features = false }
# `tr!`/`move_tr!` are imported here directly: leptos-fluent's compile-time
# `check_translations` forbids re-exporting them, so the macros are the one vendor
# touchpoint in app code (provider + config stay behind the `i18n` facade).
leptos-fluent.workspace = true

# The showcase gallery (`showcase/`) exercises the whole `ui` kit: Lucide glyphs
# in the nav and demos, plus the trait/derive surfaces the kit's forms, data grid
# and date pickers expect from a consumer. All are existing workspace deps already
# pulled in by `crates/ui`; they compile for both targets (used in shared view
# code, never gated to one).
leptos_icons.workspace = true
icondata.workspace = true
serde.workspace = true
validator = { workspace = true, features = ["derive"] }
strum.workspace = true
time = { workspace = true, features = ["macros"] }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

# Browser-only: the `CsrfClient` server-fn client reads `<meta name="csrf-token">`
# (web-sys + wasm-bindgen) and delegates to `server_fn`'s `BrowserClient`. Gated
# behind `hydrate` so the ssr build never pulls them in. `server_fn` is the
# Leptos server-fn machinery (already used by every `#[server]`), so this is not a
# new vendor surface — it is the documented client touchpoint.
server_fn = { version = "0.8.13", optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { version = "0.3.103", optional = true, features = [
    "Document",
    "Window",
    "HtmlMetaElement",
    "Element",
] }
# `Client::send`/`open_websocket` signatures name these; pinned to the versions
# already resolved for the server-fn browser client.
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
# Browser (wasm) build. `nonce` lets hydration scripts carry a CSP nonce. The
# `CsrfClient` impl and its `<meta>` reader compile only here.
hydrate = [
    "leptos/hydrate",
    "leptos/nonce",
    "i18n/hydrate",
    "ui/hydrate",
    "dep:server_fn",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:bytes",
    "dep:futures",
]
# Server build. `nonce` for strict CSP, `tracing` for observability, `rustls`
# so server-function HTTP uses rustls (matches the crypto policy).
ssr = [
    "leptos/ssr",
    "leptos/nonce",
    "leptos/tracing",
    "leptos/rustls",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "i18n/ssr",
    "ui/ssr",
    "dep:leptos_axum",
]

[lints]
workspace = true
