[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
app = { path = "../app", version = "0.1.0", default-features = false, features = ["ssr"] }
config = { path = "../../../crates/config", version = "0.1.0" }
db = { path = "../../../crates/db", version = "0.1.0" }
auth = { path = "../../../crates/auth", version = "0.1.0", features = ["ssr"] }
domain = { path = "../../../crates/domain", version = "0.1.0" }
observability = { path = "../../../crates/observability", version = "0.1.0" }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

anyhow.workspace = true
secrecy.workspace = true
serde.workspace = true
# JSON views for the MFA endpoints: passkey ids and timestamps.
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4.45", default-features = false, features = ["serde"] }

[lints]
workspace = true
